# arculator

./: .gitignore  configure.ac
podules/aeh50/: EthernetII_ID_ROM.ROM
podules/aeh50/src/: Makefile.am
podules/aeh54/: ether3.rom
podules/aeh54/src/: Makefile.am
podules/aka31/: scsirom
podules/common/net/: net.h  net_slirp.c
podules/common/net/slirp/: misc.c
podules/designit_e200/src/: Makefile.am
roms/podules/hccs_a3k_ide/: hccs_a3k_ide.rom
roms/podules/hdfc/: hdfc.rom
src/: ide_config.c  wx-config.cc  wx-console.cc  wx-hd_conf.cc  wx-hd_new.cc
